--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,12 @@ media/
 backend/media/
 backend/media/encrypted_files/
 backend/media/*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
